# paketito

./: .gitignore  README.md  pyproject.toml
.github/workflows/: format.yml
src/paketito/: __init__.py  modulo.py
tests/: test_resta.py  test_saludar.py  test_suma.py
